[gd_scene load_steps=2 format=3 uid="uid://cbk6h8xrvvbd0"]

[ext_resource type="Script" path="res://Scripts/SummonPanel.gd" id="1_kt7uj"]

[node name="Normal Summon Screen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
script = ExtResource("1_kt7uj")

[node name="PanelContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_right = 144.0
offset_bottom = 30.0
scale = Vector2(0.75, 0.75)

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
modulate = Color(1, 1, 1, 0.819608)
layout_mode = 2
color = Color(0.408329, 0.408329, 0.408329, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Special" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Special Summon
"

[node name="Tribute" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Tribute Summon
"

[node name="Normal" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Normal Summon"

[node name="Play" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Play
"

[node name="Set" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Set
"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Special" to="." method="_on_special_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Tribute" to="." method="_on_tribute_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Set" to="." method="_on_set_pressed"]
